--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
+:root{
+  --color1:#2c321a;
+  --color2: linear-gradient(243.89deg, #FFFDD1 -2.59%, #FFF1EF 95.71%);
+  --product_color:rgb(63, 59, 59);
+}
+*{
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: black;
+}
+
+.navbar{
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  height: 5rem;
+}
+nav{
+  display: flex;
+  text-align: right;
+  justify-content: flex-end;
+  flex: 1;
+}
+nav ul{
+  list-style: none;
+  display: flex;
+  flex-flow: row;
+}
+nav ul li{
+  margin: -10px;
+  color: black;
+  font-weight: 500;
+}
+nav ul li a{
+  padding: 5px;
+  margin: 0 20px;
+}
+nav ul li a:hover ,nav li a.active{
+  color:var(--color1) ;
+}
+
+.logo a img{
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+.logo{
+  width: 10rem;
+  
+}
+
+.sliderImg{
+  display: flex;
+  justify-content: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 2rem;
+}
+
+/* --single product detail--- */
+.row{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.cols{
+  flex-basis: 50%;
+  min-width: 300px;
+}
+.single-product{
+  margin-top: 50px;
+}
+.single-product .cols img{
+  padding: 0;
+}
+.single-product .cols{
+  padding: 20px;
+}
+.single-product h4{
+  margin: 20px 0;
+  font-size: 22px;
+  font-weight: bold;
+}
+.single-product select{
+  display: block;
+  padding: 10px;
+  margin-top: 20px;
+}
+.single-product input{
+  width: 50px;
+  height: 40px;
+  border: 1px solid var(--color1);
+  font-size: 20px;
+  margin-right: 10px;
+  padding-left: 10px;
+  margin-top: 20px;
+}
+.single-product input:focus{
+  outline: none;
+}
+.single-product .fas{
+  margin-left: 10px;
+}
+
+.btn{
+  display: inline-block;
+  background-color: red;
+  padding: 5px 30px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  border-radius: 30px;
+  color: white;
+  transition: background 0.5s;
+}
+
+/* --farmer card-- */
+.available{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.farmer_cards{
   display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+  margin: 4rem;
+}
+.farmer_card{
+  display: flex;
+  gap: 2rem;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  padding: 1rem;
+  margin: 4rem;
+  border-radius: 2rem;
+  background: radial-gradient(96.41% 96.41% at 5.28% 100%, #FFA7A7 0%, rgba(248, 250, 134, 0.416) 100%) ;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.farmer_img{
+  width: 40%;
+  border-radius: 100%;
 }
