--- a/src/App.css
+++ b/src/App.css
@@ -147,10 +147,15 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transform: scale(1.02);
 }
 .farmer_img{
-  width: 40%;
-  border-radius: 100%;
-}
+  width: 60%;
 
+  border-radius: 100%;
+  object-fit: cover;
+}
+.product_head{
+  display: flex;
+  justify-content: space-around;
+}
 
 /* dashbosrd */
 
