--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,10 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   width: 40%;
   border-radius: 100%;
 }
-
+.product_head{
+  display: flex;
+  justify-content: space-around;
+}
 
 /* dashbosrd */
 
