--- a/src/App.css
+++ b/src/App.css
@@ -147,7 +147,9 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transform: scale(1.02);
 }
 .farmer_img{
-
+  width: 60%;
+  border-radius:100%; 
+}
 
 /* dashbosrd */
 
