--- a/src/App.css
+++ b/src/App.css
@@ -240,7 +240,29 @@ th, td {
 h2{
   font-size:1.5rem;
   margin: 30px 114px;
+}/* farmer_detail */
+
+.supplyer_card {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
+  margin: 4rem;
+  border-radius: 2rem;
+  transition: scale .3s ease-in-out;
+  background: radial-gradient(96.41% 96.41% at 5.28% 100%, #FFA7A7 0%, rgba(248, 250, 134, 0.416) 100%);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  height: 27rem;
+  width: 59rem;
+  justify-content: space-evenly;
 }
-p{
-  padding:2px 32px;;
+.supplyer_img{
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+.supplyer_detail{
+  text-align:justify;
+  line-height: 1.7rem;
 }
